--- a/src/main/resources/expectedassertions.properties
+++ b/src/main/resources/expectedassertions.properties
@@ -60,3 +60,12 @@ card=Save your card securely on Liquide
 
 ######   AddCoinsNegative   ##############
 alert.txt=Please enter valid email address
+
+######   TradePastReturns   ##############
+filters.txt=Filter
+
+######   Watchlist   ##############
+watchlistempty.txt=Watchlist is empty!
+mywatchlist.txt=My watchlist
+trendingstocks.txt=Trending Stocks
+sortby.txt=Sort by
