--- a/src/main/resources/testdata.properties
+++ b/src/main/resources/testdata.properties
@@ -12,7 +12,6 @@ emailid=mamatha@gmail.com
 ###########################   BrokerAccount ###################
 token=8367358123
 pinnumber=171272
-
 num=9182268451
 pin=258036
 ##################  Buy and Sell ###################
@@ -46,3 +45,6 @@ emptyemail=
 Aplhabetemail=hfdhfvhdv
 Numericemail=1354525634
 specialEmail=@#$$$#$
+
+##################  Watchlist ###################
+stockName=Maha
